crates/fossil-codegen/tests/snapshots/codegen_ops__empty_relation.snap
---
source: crates/fossil-codegen/tests/codegen_ops.rs
assertion_line: 286
expression: sql_for(7)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        step_1.iri AS subject,
        'https://example.org/name' AS predicate,
        step_1.name AS object
    FROM (SELECT id, name FROM source WHERE false) AS step_1
) TO 'output.parquet' (FORMAT PARQUET);
