crates/fossil-codegen/tests/snapshots/codegen_ops__extend_concat.snap
---
source: crates/fossil-codegen/tests/codegen_ops.rs
assertion_line: 256
expression: sql_for(1)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        'https://example.org/' || users.id AS subject,
        'https://example.org/name' AS predicate,
        users.name AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
