crates/fossil-codegen/tests/snapshots/codegen_ops__group_by_count.snap
---
source: crates/fossil-codegen/tests/codegen_ops.rs
expression: sql_for(10)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        step_2.iri AS subject,
        'https://example.org/name' AS predicate,
        step_2.name AS object
    FROM (SELECT country, COUNT(id) AS "n" FROM (users) GROUP BY country) AS step_2
) TO 'output.parquet' (FORMAT PARQUET);
