crates/fossil-codegen/tests/snapshots/codegen_ops__multi_triple_emit_sink.snap
---
source: crates/fossil-codegen/tests/codegen_ops.rs
expression: sql_for(12)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        'https://example.org/' || users.id AS subject,
        'https://example.org/name' AS predicate,
        users.name AS object
    FROM users
    UNION ALL
    SELECT
        'https://example.org/' || users.id AS subject,
        'https://example.org/email' AS predicate,
        users.email AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
